--- a/src/components/GenerateMenu/GenerateMenu.module.css
+++ b/src/components/GenerateMenu/GenerateMenu.module.css
@@ -8,4 +8,6 @@
   height: 100%;
   gap: 20px;
   margin: 5px 5px 20px 5px;
+  overflow: scroll;
+  width: 100%;
 }
