--- a/src/components/custom/Button/Button.module.css
+++ b/src/components/custom/Button/Button.module.css
@@ -1,10 +1,19 @@
 .button {
-  color: var(--bg-color);
-  background-color: var(--font-color);
+  color: var(--font-color);
+  background-color: var(--bg-color);
   border-radius: var(--border-radius);
-  border: 2px solid var(--bg-color);
+  border: 2px solid var(--font-color);
   min-height: 40px;
+  min-width: 100px;
   padding: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.button:hover {
+  outline: 2px solid var(--secondary-color);
 }
 
 .primary {
